chore: Add .qovery.yml file to deploy app with Qovery 🚀

--- a/.qovery.yml
+++ b/.qovery.yml
@@ -1,11 +1,11 @@
 ---
 application:
   name: "webproxy"
-  project: "zhu"
+  project: "zhujq"
   organization: "QoveryCommunity"
   storage:
   - name: "data"
-    size: "500"
+    size: "750"
     type: "hdd"
     mount_point: "/mnt/data"
 routers:
